# PROJECT(HELLO)
find_package(glog)
find_package(gflags)
find_package(gtest)

SET(SRC_LIST useHello.cpp)
SET(LIBHELLO_SRC hello.cpp)
INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})
message(STATUS "HELLO_INCLUDE_DIR is " ${HELLO_INCLUDE_DIR})
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
add_library(src::hello ALIAS hello)
# target_include_directories(hello )
target_link_libraries(hello glog::glog)
install(TARGETS hello
        LIBRARY DESTINATION lib)
install(FILES hello.h DESTINATION include)
MESSAGE(STATUS "THIS will be installed in " ${CMAKE_INSTALL_PREFIX})
ADD_EXECUTABLE(sayhello ${SRC_LIST})
target_link_libraries(sayhello gflags gtest hello)
